fixed text overlapping on mobile

--- a/app/assets/stylesheets/pages/_landing.scss
+++ b/app/assets/stylesheets/pages/_landing.scss
@@ -87,6 +87,7 @@ ul.info i{
 ul.info li{
   color: #EFEFEF;
   margin-bottom: 15px;
+  white-space: nowrap;
 }
 
 ul.info li a{
